RESOLVED FIXED49766
REGRESSION (WebKit2): Plug-ins and <video> start playing immediately in background tabs
https://bugs.webkit.org/show_bug.cgi?id=49766
Summary REGRESSION (WebKit2): Plug-ins and <video> start playing immediately in backg...
Darin Adler
Reported 2010-11-18 16:06:26 PST
REGRESSION (WebKit2): Plug-ins and <video> start playing immediately in background tabs
Attachments
Patch (1.47 KB, patch)
2010-11-18 16:10 PST, Darin Adler
kdecker: review+
Darin Adler
Comment 1 2010-11-18 16:10:17 PST
Kevin Decker
Comment 2 2010-11-18 16:24:56 PST
Comment on attachment 74313 [details] Patch r=me
Darin Adler
Comment 3 2010-11-18 16:40:53 PST
Note You need to log in before you can comment on or make changes to this bug.