third_party/WebKit/WebKit2/WebProcess/WebPage/WebPage.cpp
@@ -28,9 +28,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "Arguments.h"
 #include "DrawingArea.h"
-#if PLATFORM(QT)
 #include "HitTestResult.h"
-#endif
 #include "InjectedBundle.h"
 #include "InjectedBundleBackForwardList.h"
 #include "MessageID.h"
@@ -80,7 +78,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <runtime/JSValue.h>
 
 #if ENABLE(PLUGIN_PROCESS)
-// FIXME: This is currently mac specific!
+// FIXME: This is currently Mac-specific!
 #include "MachPort.h"
 #endif
 
@@ -130,6 +128,14 @@ WebPage::WebPage(uint64_t pageID, const WebPageCreationParameters& parameters)
     pageClients.inspectorClient = new WebInspectorClient(this);
     pageClients.backForwardClient = WebBackForwardListProxy::create(this);
     m_page = adoptPtr(new Page(pageClients));
+
+    // Windows and Qt do not yet call setIsInWindow. Until they do, just leave
+    // this line out so plug-ins and video will work. Eventually all platforms
+    // should call setIsInWindow and this comment and #if should be removed,
+    // leaving behind the setCanStartMedia call.
+#if !PLATFORM(WIN) && !PLATFORM(QT)
+    m_page->setCanStartMedia(false);
+#endif
 
     updatePreferences(parameters.store);
 
@@ -1010,6 +1016,7 @@ void WebPage::didSelectItemFromActiveContextMenu(const WebContextMenuItemData& i
 }
 
 #if PLATFORM(MAC)
+
 void WebPage::addPluginView(PluginView* pluginView)
 {
     ASSERT(!m_pluginViews.contains(pluginView));
